Bug 74336 - Regression in particular graph loading (Comment 16)
Summary: Regression in particular graph loading (Comment 16)
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: graphics stack (show other bugs)
Version:
(earliest affected)
4.2.0.4 release
Hardware: x86-64 (AMD64) All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:4.3.0
Keywords: regression
Depends on:
Blocks:
 
Reported: 2014-02-01 18:15 UTC by Daniil Bratashov
Modified: 2020-04-06 19:46 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
single slide example (117.54 KB, application/vnd.openxmlformats-officedocument.presentation)
2014-02-01 18:15 UTC, Daniil Bratashov
Details
screenshot with MS Office 2007 (62.36 KB, image/png)
2014-02-01 18:17 UTC, Daniil Bratashov
Details
LO behavior prior to regression (78.21 KB, image/png)
2014-02-01 18:17 UTC, Daniil Bratashov
Details
4.2 with webfonts installed (74.96 KB, image/png)
2014-02-01 18:39 UTC, Daniil Bratashov
Details
bibisect log (3.02 KB, text/plain)
2014-02-01 20:49 UTC, Jorendc
Details
screenshot from another system (corrupted labels) (164.58 KB, image/png)
2014-02-03 17:39 UTC, Daniil Bratashov
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Daniil Bratashov 2014-02-01 18:15:25 UTC
Created attachment 93188 [details]
single slide example

Loading of this particular type of graphs (all generated with similar template) broken somewhere between 4.0.2.2 and 4.2-release. Have seen another occurencies of similar problems (black background instead of grid, slow loading) on some other graphs also.
Comment 1 Daniil Bratashov 2014-02-01 18:17:03 UTC
Created attachment 93189 [details]
screenshot with MS Office 2007
Comment 2 Daniil Bratashov 2014-02-01 18:17:56 UTC
Created attachment 93190 [details]
LO behavior prior to regression
Comment 3 Daniil Bratashov 2014-02-01 18:39:29 UTC
Created attachment 93191 [details]
4.2 with webfonts installed
Comment 4 Daniil Bratashov 2014-02-01 18:50:22 UTC
There also some difference in bug appearance between systems, on minimal x86-64 slackware installation I have got also all text messages scrambled (I'll attach screenshot from that system when I'll go there again), on my other x86 slackware installation the only graph/grid is invisible (screenshot "with webfonts installed", but seems that removal of webfonts creates nearly the same result).
Comment 5 Jorendc 2014-02-01 20:08:39 UTC
I can reproduce this behavior, tested using Mac OSX 10.9 with LibreOffice Version: 4.2.0.4 Build ID: 05dceb5d363845f2cf968344d7adab8dcfb2ba71

Also using LibreOffice Version: 4.3.0.0.alpha0+
Build ID: dcca10d4e26d4602d9ac4f0b340b52c31fe086e3
TinderBox: MacOSX-x86@49-TDF, Branch:master, Time: 2014-02-01_02:04:21

NOT reproducible using Version: 4.1.5.1
Build ID: e0a1805d063a472a7b281ae3977a26d42a48b20
Comment 6 Jean-Baptiste Faure 2014-02-01 20:26:20 UTC
Reproducible with development version 4.2.1.0.0+
Seems to be a wmf problem.
Same behavior with the master (Build ID: c634faf12886228754eb59ec9bedf6cd6f631054)
Looks better with 4.1.4

Best regards. JBF
Comment 7 Jorendc 2014-02-01 20:48:06 UTC
Bibisection based on:
'bad': Blue graph-line is really vaguely visible
'good': blue graph-line is visible

MacBook-Pro-van-Joren-DC:bibisect_mac_lo42 Joren$ git bisect bad 7cdaf5224c25b6976177aaa63407d7446a56eebf is the first bad commit
commit 7cdaf5224c25b6976177aaa63407d7446a56eebf
Author: Norbert Thiebaud <nthiebaud@gmail.com>
Date:   Tue Nov 12 11:35:22 2013 -0600

    source 7694bb997a68f6f8ebc03817be7e31ceb872ceb4
    
    source 7694bb997a68f6f8ebc03817be7e31ceb872ceb4
    source b7f2129c1186e1c5b2dd19ebb79ff82b213c0870
    source 4f3287c8b8e72dcad9539c95b8d14ac7bebd35d7
    source bbabdfd84135bf2b8db09a4c1fb1d6f390ea5dba
    source f86ec4cdbd9a7b8851748a4647969069fb75660b
    source 904aff1932d3c88c9530f3f174ee4b8182afba1d
    source 8fd1bd1879bae6d183ff45eba49d46ccfcd466c0
    source 38d2ea2b25f323337b91ab1507bc0b955876a216
    source 5b53053af54bb8fce2a91c0d59929c02dbb1e912
    source 4bb1b555c533493799d780f18c1ab602677ef88a
    source db20a50fab35c15baf55f0146ed0cb80527053e8
    source 87dfa6dd336d596112c0beb6b42f082178461678
    source bf4ecd6138f07ca6207eeec306517eff4aff220e
    source aaf3ff8adf0821090ba4cc9043e7f3a1ce1f6033
    source 650eaad6cee4211d15f7d5e91ef70d482205228e
    source 03e93ba2bcaf6425eaffa32379f227ea7265d39e
    source d3c1c8d7587239abcf5448ee143a61fe54b01422
    source 41efa1535827b3dfef66ed4ce6c20e85081fe060
    source 1ae19c8e6a1651748eb47cc0b8de3c58503cc7eb
    source 913d6fb1cc0f9fa879b330d1322f8a19dfc050aa
    source c974471918bd5aa5719ec703564bdb22c5a33a6e
    source d74323815aec2abb25eae026052651ceec7e372a
    source 97cd0f38a53f97034442de57d48006d30c4a94db
    source dbb0703272c55c74a150ec4b6a60463e6212d585
    source cb1ec05a72d54d55c8a98778c56ee01197cf45f4
    source a1936e4183240981af0bf616207994e3a2f7929e
    source ec13a7bdbf904092df066a52ccb03fda12b4bed3
    source f5000d66bac505572a91f2bc391ecc23bd1ee670
    source 782adba4d436c65cdf85d48f28486321873b15ed
    source 8c1d1b66904cdd95e8eec746a81cf1c57ad0e85a
    source 8fbb2ebc2155b03d1436d9100886318642d47714
    source 47dca10811a31cf28e72b9bc034b9d8975327df3
    source b9c46f46cebc0ebed5a91f8fbb9d0a01366f1f77
    source a662d427108d781122f979392ce544017d14fc17
    source 18eba6a69f49c9e8e2902f84e96cb6906ee337f1
    source 967b623031cd115722e2708f1281282ca8dccbe0
    source c96802f0e2e553bfbb3bd036df95ea34d2f5741a
    source fa2363344cbf85af17a80c4757b226ab43391af6
    source b5f3f55ce59b400f885c41413a3087e3406a424d
    source ad09b2f7efac628ac4261b86f9fd085f83ebe717
    source 2e963d0510aacf2d5e59a7604c106bae7a928921
    source 0d5a2d2284addd5d161ca7bb30a354d268c2600a
    source 5c346ec8521b0f137273e5055fc19eee37a20169
    source 0b9bf62d3ddfe3fd1ed9ec4cc8eddf23793ee932
    source 19b18c40084070ffe10cde45b4c363ee9d16b804
    source f0f8eedf46f386be83608e9d37c2e4c0e7cbe8a8
    source 0900438214c7f3eeb81a6f5e00978357847bbaef
    source 02da9f7a917ffc68dfe7a44c8d03b272cb5bfc18
    source 5e5f3671f8448ee21b00f0d2a08b214e61f7f744
    source b7e1aeee11d1405babce1855a4bc67d8c9e4ade4
    source 5b14a9bef9a8589524baa7405a569c899b368d65
    source 55e74e06ffae30b9d01fa24fd1668d8816ee2500
    source 4286070ec53985a80d92cbba647c28133ce89158
    source 9c42545be17b44d3af9aa4b7efa35c5121310e4a
    source 86783bd62b7984afc63310400bce343e29ae5c02
    source 102015f658a3f27035cac00821feac0be2384b29
    source dc043ab944c38e713c558a8db81880fce9d45f07
    source 84f1f1d149b6ba95aca8adb7e34b001e102f07fe
    source caab53cf21bc38ead3927941795b3c8a1432589a
    source 5883e1926b80334cfdb7a3dd63d6391b1738c2a6
    source 733d88433c560af8f51f010fcaae9ce7a29b0325
    source 307aeb6e97294e554ecdfec642c0ac6e926ecde7
    source 46ee3bd7bd2afc2f05c3ff8650f2f4507e72fe64

:040000 040000 e4663c15b682418f61069050aefa022e5b550705 3b994080c98f33efc0b5732fb71f81ed39a44549 M	LibreOffice.app
Comment 8 Jorendc 2014-02-01 20:49:14 UTC
Created attachment 93196 [details]
bibisect log

Sorry for the spam :-). bibisect attached
Comment 9 Daniil Bratashov 2014-02-03 17:39:33 UTC
Created attachment 93299 [details]
screenshot from another system (corrupted labels)
Comment 10 Markus Mohrhard 2014-03-19 04:31:30 UTC
Can someone please bibisect when this document started to hang in master? Sadly it crashes my gdb session so I'm having some fun with Libreoffice hanging and gdb crashing.
Comment 11 Andras Timar 2014-03-28 10:15:21 UTC
> Can someone please bibisect when this document started to hang in master?
First bad commit is in the range of e1b85e77b15a02d40049994e9829a0e3b921850c..9fd10cca8e8a3121b378b9e820c565c101985809
Comment 12 Markus Mohrhard 2014-03-30 21:26:56 UTC
(In reply to comment #11)
> > Can someone please bibisect when this document started to hang in master?
> First bad commit is in the range of
> e1b85e77b15a02d40049994e9829a0e3b921850c..
> 9fd10cca8e8a3121b378b9e820c565c101985809

Surprisingly it is not one of my commits which broke the import. Somehow reverting 09c722873b2d378d2d155f5f1dd7d8f3fb2012e9 seems to fix the problem.

@Andras: Any idea how that patch might be related to chart rendering in impress?
Comment 13 Andras Timar 2014-03-31 05:52:36 UTC
(In reply to comment #12)

> @Andras: Any idea how that patch might be related to chart rendering in
> impress?

In fact, it is not a chart, but an embedded OLE object with WMF preview. I'll try to fix it.
Comment 14 Andras Timar 2014-03-31 07:58:18 UTC
Interestingly, I cannot reproduce the bug on OS X 10.9 and on Windows. I see a slightly better image than "LO behavior prior to regression", because dashed lines are visible, too. There is a problem with labels, i.e. characters are a little bit too wide. 

Under Linux, however, I see the same as "screenshot from another system (corrupted labels)".
Comment 15 Stefan Gruber 2014-04-03 21:27:42 UTC
I can confirm this bug of bad rendering WMF-files on LO Version 4.2.2 (opensuse factory build on opensuse 13.1).
I had not any problems on stable versions up to 4.1.5.
My WMF-File is very similar to attachment "LO behavior prior to regression" - a spectral analysis graphic generated by a windows-software.
In LO 4.2.2 the spectral line is missing, where the scales and numbers are correct. 
I can create an attachment if requested.
Comment 16 Andras Timar 2014-04-05 18:10:55 UTC
Let alone the hang on master here, I opened bug 77088 for that. 

Git bisect showed that after the following commit the line drawing became different, i.e. 'bad': Blue graph-line is really vaguely visible, 'good': blue graph-line is visible as in comment 7.
 02da9f7a917ffc68dfe7a44c8d03b272cb5bfc18 is the first bad commit
commit 02da9f7a917ffc68dfe7a44c8d03b272cb5bfc18
Author: Armin Le Grand <alg@apache.org>
Date:   Fri May 10 08:48:11 2013 +0000

    Resolves: #i110384# added better fat line rendering where possible

Note, that the problem occurs on 64-bit systems only.
Comment 17 Andras Timar 2014-04-05 18:37:09 UTC
For the corrupted labels, I added bug 77089 and bug 77090. Let's use this bug only for the regression identified by comment 16.
Comment 18 Commit Notification 2014-04-24 20:53:05 UTC
Tomaž Vajngerl committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=4abaaf7663d053f1c37a34487320246e29e43516

fdo#74336 wrongly transformed line width - use 0 for height



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 19 Commit Notification 2014-04-26 17:30:01 UTC
Tomaž Vajngerl committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=6d0005d95f20a326fe308a7c59dd2801f0d0b241

fdo#74336 draw hairline if line width is small



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 20 Commit Notification 2014-04-26 17:30:17 UTC
Tomaž Vajngerl committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=17ca93a6e592d3109e47c756fcfe8ac975acae5f

fdo#74336 need to transform dash length / dot length / distance



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 21 Andras Timar 2014-04-27 18:15:44 UTC
With Tomaž's fixes, this bug is RESOLVED FIXED.
Comment 22 Commit Notification 2014-04-28 15:40:09 UTC
Tomaž Vajngerl committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=2ac96e52b05e9b9072788b80688a13436359b439

Revert "fdo#74336 need to transform dash length / dot length / distance"



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 23 Commit Notification 2014-04-28 15:40:25 UTC
Tomaž Vajngerl committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=a9020e461803964a206d5551884b70717eed165c

fdo#74336 limit the size of the non-placeable WMF image



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.