fdo#74336 wrongly transformed line width - use 0 for height

Change-Id: I3915cfabb9568480d74ea6d4e459def6fe912eb9