vcl/source/gdi/outdev.cxx
@@ -2159,7 +2159,7 @@ bool OutputDevice::ImpTryDrawPolyLineDirect(
     // transform the line width if used
     if( fLineWidth != 0.0 )
     {
-        aB2DLineWidth = aTransform * ::basegfx::B2DVector( fLineWidth, fLineWidth );
+        aB2DLineWidth = aTransform * ::basegfx::B2DVector( fLineWidth, 0.0 );
     }
 
     // transform the polygon
